fix(KIBON-3025): remove whitespace from error-message from select dropdown, use smaller spacing for options

--- a/ebegu-web/src/app/core/component/dv-input-container/dv-input-container.less
+++ b/ebegu-web/src/app/core/component/dv-input-container/dv-input-container.less
@@ -75,8 +75,9 @@ dv-input-container-x {
 
         .mat-mdc-select-trigger {
             height: 100%;
-            .mat-mdc-select-value {
-                padding-top: 7.5px;
+
+            .mat-mdc-select-value-text {
+                padding-left: 0;
             }
         }
 
